Update tests for mappers.

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,24 @@ subprojects {
 
     dependencies {
         testCompile 'junit:junit:4.12'
+        testCompile 'com.google.truth:truth:0.25'
     }
 
     repositories {
         jcenter()
+    }
+
+    task testJar(type: Jar, dependsOn: testClasses) {
+        baseName = "${archivesBaseName}-test"
+        from sourceSets.test.output
+    }
+
+    configurations {
+        tests
+    }
+
+    artifacts {
+        tests testJar
     }
 
 }
@@ -47,6 +61,7 @@ project(':auto-json-provider-jackson') {
     dependencies {
         compile project(':auto-json-core')
         compile 'com.fasterxml.jackson.core:jackson-core:2.5.1'
+        testCompile project(path: ':auto-json-core', configuration: 'tests')
         testCompile project(path: ':auto-json-integration-test', configuration: 'tests')
     }
 
@@ -65,19 +80,6 @@ project(':auto-json-integration-test') {
 
     dependencies {
         compile project(':auto-json-core')
-    }
-
-    task testJar(type: Jar, dependsOn: testClasses) {
-        baseName = "${archivesBaseName}-test"
-        from sourceSets.test.output
-    }
-
-    configurations {
-        tests
-    }
-
-    artifacts {
-        tests testJar
     }
 
 }
